try to fix phonegap

--- a/css/course.css
+++ b/css/course.css
@@ -163,8 +163,8 @@ a {
         margin-bottom: 0px;
         margin-left: 5px;
         margin-right: 5px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
         background: white;
     }
 }
