--- a/css/instructor.css
+++ b/css/instructor.css
@@ -106,8 +106,8 @@ body {
         margin-bottom: 0px;
         margin-left: 5px;
         margin-right: 5px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
         background: white;
     }
 }
